minor fix (background overflow)

--- a/assets/css/backgroundStyles.css
+++ b/assets/css/backgroundStyles.css
@@ -1,5 +1,6 @@
 body {
     background-color: var(--background);
+    overflow-x: hidden;
 }
 
 .background {
